{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 92,
  "lineage": "82fe4d5f-6718-21bd-7705-9e8dcc2f24b4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform-eks-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047c73891131da09e",
            "domain": "vpc",
            "id": "eipalloc-047c73891131da09e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-237-147-247.compute-1.amazonaws.com",
            "public_ip": "34.237.147.247",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-eks-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018374338799:internet-gateway/igw-03aa24d6cb60da757",
            "id": "igw-03aa24d6cb60da757",
            "owner_id": "018374338799",
            "tags": {
              "Name": "terraform-eks-project-igw"
            },
            "tags_all": {
              "Name": "terraform-eks-project-igw"
            },
            "vpc_id": "vpc-04c854d8ede876d31"
          },
          "dependencies": [
            "aws_vpc.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform-eks-ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047c73891131da09e",
            "connectivity_type": "public",
            "id": "nat-02e5f38d9ce27cdb1",
            "network_interface_id": "eni-084e34eaadd952340",
            "private_ip": "10.0.0.86",
            "public_ip": "34.237.147.247",
            "subnet_id": "subnet-00c9f2ec622f09d8d",
            "tags": {
              "Name": "terraform-eks-project-ng"
            },
            "tags_all": {
              "Name": "terraform-eks-project-ng"
            }
          },
          "dependencies": [
            "aws_eip.terraform-eks-EIP",
            "aws_subnet.terraform-eks-public-subnet",
            "aws_vpc.project",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-eks-private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018374338799:route-table/rtb-0ea1e9b419dd86eba",
            "id": "rtb-0ea1e9b419dd86eba",
            "owner_id": "018374338799",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02e5f38d9ce27cdb1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-eks-private-route"
            },
            "tags_all": {
              "Name": "terraform-eks-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c854d8ede876d31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraform-eks-EIP",
            "aws_nat_gateway.terraform-eks-ng",
            "aws_subnet.terraform-eks-public-subnet",
            "aws_vpc.project",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-eks-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018374338799:route-table/rtb-0e256d34e43d92b81",
            "id": "rtb-0e256d34e43d92b81",
            "owner_id": "018374338799",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03aa24d6cb60da757",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-eks-public-route"
            },
            "tags_all": {
              "Name": "terraform-eks-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c854d8ede876d31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-eks-igw",
            "aws_vpc.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-eks-private-routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad0828b9e71a6cd7",
            "route_table_id": "rtb-0ea1e9b419dd86eba",
            "subnet_id": "subnet-00b7f4f9c026b0379"
          },
          "dependencies": [
            "aws_eip.terraform-eks-EIP",
            "aws_nat_gateway.terraform-eks-ng",
            "aws_route_table.terraform-eks-private-route",
            "aws_subnet.terraform-eks-private-subnet",
            "aws_subnet.terraform-eks-public-subnet",
            "aws_vpc.project",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1424ac8fa1740c3",
            "route_table_id": "rtb-0ea1e9b419dd86eba",
            "subnet_id": "subnet-059a2a2b2665bf16f"
          },
          "dependencies": [
            "aws_eip.terraform-eks-EIP",
            "aws_nat_gateway.terraform-eks-ng",
            "aws_route_table.terraform-eks-private-route",
            "aws_subnet.terraform-eks-private-subnet",
            "aws_subnet.terraform-eks-public-subnet",
            "aws_vpc.project",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-eks-public-routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f37d3d585ebd8590",
            "route_table_id": "rtb-0e256d34e43d92b81",
            "subnet_id": "subnet-00c9f2ec622f09d8d"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-eks-igw",
            "aws_route_table.terraform-eks-public-route",
            "aws_subnet.terraform-eks-public-subnet",
            "aws_vpc.project",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1aad8891d9b4b3d",
            "route_table_id": "rtb-0e256d34e43d92b81",
            "subnet_id": "subnet-060866e4a617f7445"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-eks-igw",
            "aws_route_table.terraform-eks-public-route",
            "aws_subnet.terraform-eks-public-subnet",
            "aws_vpc.project",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018374338799:security-group/sg-00f1e8781b4acdd42",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f1e8781b4acdd42",
            "ingress": [],
            "name": "terraform-eks-project-cluster",
            "name_prefix": "",
            "owner_id": "018374338799",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-project"
            },
            "tags_all": {
              "Name": "terraform-eks-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c854d8ede876d31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "project-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "219.255.189.48/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2108052351",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00f1e8781b4acdd42",
            "security_group_rule_id": "sgr-0dead1ff2a9b0804b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.project-cluster",
            "aws_vpc.project",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-eks-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018374338799:subnet/subnet-00b7f4f9c026b0379",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b7f4f9c026b0379",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "018374338799",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-private-a",
              "kubernetes.io/cluster/terraform-eks-project": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-private-a",
              "kubernetes.io/cluster/terraform-eks-project": "shared"
            },
            "vpc_id": "vpc-04c854d8ede876d31"
          },
          "dependencies": [
            "aws_vpc.project",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018374338799:subnet/subnet-059a2a2b2665bf16f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059a2a2b2665bf16f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "018374338799",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-private-c",
              "kubernetes.io/cluster/terraform-eks-project": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-private-c",
              "kubernetes.io/cluster/terraform-eks-project": "shared"
            },
            "vpc_id": "vpc-04c854d8ede876d31"
          },
          "dependencies": [
            "aws_vpc.project",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-eks-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018374338799:subnet/subnet-00c9f2ec622f09d8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c9f2ec622f09d8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "018374338799",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-public-a",
              "kubernetes.io/cluster/terraform-eks-project": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-public-a",
              "kubernetes.io/cluster/terraform-eks-project": "shared"
            },
            "vpc_id": "vpc-04c854d8ede876d31"
          },
          "dependencies": [
            "aws_vpc.project",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018374338799:subnet/subnet-060866e4a617f7445",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060866e4a617f7445",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "018374338799",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-public-c",
              "kubernetes.io/cluster/terraform-eks-project": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-public-c",
              "kubernetes.io/cluster/terraform-eks-project": "shared"
            },
            "vpc_id": "vpc-04c854d8ede876d31"
          },
          "dependencies": [
            "aws_vpc.project",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018374338799:vpc/vpc-04c854d8ede876d31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e6fc187cab6334ff",
            "default_route_table_id": "rtb-06838d62144fc73a2",
            "default_security_group_id": "sg-0a553c58e4b19c86a",
            "dhcp_options_id": "dopt-0d9f33c2353a15337",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04c854d8ede876d31",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06838d62144fc73a2",
            "owner_id": "018374338799",
            "tags": {
              "Name": "terraform-eks-project-node",
              "kubernetes.io/cluster/terraform-eks-project": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-project-node",
              "kubernetes.io/cluster/terraform-eks-project": "shared"
            }
          }
        }
      ]
    }
  ]
}